# bakefile

./: Bakefile  Cargo.toml  LICENSE.md  README.md
.github/workflows/: main.yml
src/: bak.rs  bake.pest  errors.rs  execute.rs  ing.rs  knead.rs  lib.rs  main.rs  pars.rs
tests/simple/: Bakefile.0c1t2s  Bakefile.0c3t3s  Bakefile.3c3t3s  Bakefile.5c1t2s
