[package]
name = "bakefile"
version = "0.2.3"
edition = "2021"
# license = "Hippocratic-2.1"
license-file = "LICENSE.md"
authors = ["Gabriel Falcão <gabrielteratos@gmail.com>"]
description = "run commands"
documentation = "https://docs.rs/bakefile"
readme = "README.md"
homepage = "https://github.com/bakefile/bakefile"
exclude = ["tests"]

[dependencies]
clap = { version = "4.4.8", features = ["env", "string", "unicode", "derive", "wrap_help"] }
iocore = "0.110.1"
pest = { version = "2.7.5", features = ["pretty-print"] }
pest_derive = "2.7.5"
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
serde_derive = "1.0.193"

[build-dependencies]
pest = { version = "2.7.5", features = ["pretty-print"] }
pest_derive = "2.7.5"

[dev-dependencies]
k9 = "0.11.6"

[[bin]]
name = "bakefile"
path = "src/main.rs"
bench = false

[lib]
name = "bakefile"
path = "src/lib.rs"
