[package]
name = "bakefile"
version = "0.5.0"
edition = "2021"
license = "Hippocratic-2.1"
authors = ["Gabriel Falcão <gabrielteratos@gmail.com>"]
description = "run commands"
documentation = "https://docs.rs/bakefile"
readme = "README.md"
homepage = "https://github.com/bakefile/bakefile"
exclude = ["tests"]

[dependencies]
clap = { version = "4.4.8", features = ["env", "string", "unicode", "derive", "wrap_help"] }
sanitation = "0.0.1"
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
serde_derive = "1.0.193"


[dev-dependencies]
k9 = "0.11.6"

[[bin]]
name = "bake"
path = "src/main.rs"
bench = false

[lib]
name = "bakefile"
path = "src/lib.rs"
